--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -20,6 +20,23 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden scroll;
+
+  &::-webkit-scrollbar {
+    // width: 6px;
+    display: none;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #b5b5b5;
+    border-radius: 4px;
+  }
+}
+
+.custom-scrollbar {
   &::-webkit-scrollbar {
     // width: 6px;
     display: none;
@@ -58,4 +75,18 @@ body {
   display: -webkit-box;
   -webkit-line-clamp: 1; // default 1 line
   -webkit-box-orient: vertical;
+}
+
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1, 1);
+  }
+
+  50% {
+    transform: scale(1.5, 1.5);
+  }
+
+  100% {
+    transform: scale(1, 1);
+  }
 }
