--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -90,3 +90,17 @@ body {
     transform: scale(1, 1);
   }
 }
+
+@keyframes zoom-in-zoom-out-home {
+  0% {
+    transform: scale(1, 1);
+  }
+
+  50% {
+    transform: scale(1.1, 1.1);
+  }
+
+  100% {
+    transform: scale(1, 1);
+  }
+}
