--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,7 +1,7 @@
 html,
 body {
   scroll-behavior: smooth;
-  background-color: #09080c;
+  background-color: white;
 }
 
 body {
@@ -22,8 +22,8 @@ body {
   overflow: hidden scroll;
 
   &::-webkit-scrollbar {
-    // width: 6px;
-    display: none;
+    width: 6px;
+    // display: none;
   }
 
   &::-webkit-scrollbar-track {
