--- a/src/components/sn-home/SliderDemo/style.scss
+++ b/src/components/sn-home/SliderDemo/style.scss
@@ -81,3 +81,73 @@
 #s5:checked~.cards #slide2 {
     transform: translate3d(290%, 0, -580px);
 }
+
+@media only screen and (max-width: 1441px) {
+    .container {
+        .cards {
+            height: 530px;
+            width: 244px;
+
+            label {
+                width: 244px;
+                height: 100%;
+            }
+        }
+    }
+
+    #s1:checked~.cards #slide4,
+    #s2:checked~.cards #slide5,
+    #s3:checked~.cards #slide1,
+    #s4:checked~.cards #slide2,
+    #s5:checked~.cards #slide3 {
+        transform: translate3d(-290%, 0, -580px);
+    }
+
+    #s1:checked~.cards #slide5,
+    #s2:checked~.cards #slide1,
+    #s3:checked~.cards #slide2,
+    #s4:checked~.cards #slide3,
+    #s5:checked~.cards #slide4 {
+        transform: translate3d(-129%, 0, -270px);
+    }
+
+    #s1:checked~.cards #slide1,
+    #s2:checked~.cards #slide2,
+    #s3:checked~.cards #slide3,
+    #s4:checked~.cards #slide4,
+    #s5:checked~.cards #slide5 {
+        transform: translate3d(0, 0, 0);
+    }
+
+    #s1:checked~.cards #slide2,
+    #s2:checked~.cards #slide3,
+    #s3:checked~.cards #slide4,
+    #s4:checked~.cards #slide5,
+    #s5:checked~.cards #slide1 {
+        transform: translate3d(129%, 0, -270px);
+    }
+
+    #s1:checked~.cards #slide3,
+    #s2:checked~.cards #slide4,
+    #s3:checked~.cards #slide5,
+    #s4:checked~.cards #slide1,
+    #s5:checked~.cards #slide2 {
+        transform: translate3d(290%, 0, -580px);
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .container {
+        .cards {
+            height: 282px;
+            width: 130px;
+
+            label {
+                width: 130px;
+                height: 100%;
+            }
+        }
+    }
+
+}
